...
      }
    },
    "Blocked" : {
      "comment" : "A label for a blocked release.",
      "isCommentAutoGenerated" : true
    },
    "Blocked & Excluded" : {

    },
    "Blocked Qualities" : {

    },
    "Blocklist" : {
...

    },
    "Calendar" : {
      "comment" : "The title of the calendar view.",
      "isCommentAutoGenerated" : true
    },
    "Cancel" : {

    },
    "Cast" : {

    },
    "Categories" : {
...
    "Disable Provider?" : {

    },
    "Disabled" : {

    },
    "Discard Changes" : {
      "comment" : "The button that discards changes in the naming builder.",
      "isCommentAutoGenerated" : true
    },
    "Discard Changes?" : {

    },
...
    "Duration" : {

    },
    "Each server translates paths for itself, so a default and a 4K server sharing a download client still need a mapping each." : {

    },
    "Edit" : {

    },
    "Edit %@" : {

    },
    "Edit as Text" : {
...
    "SABnzbd Not Set Up" : {

    },
    "SABnzbd Server" : {

    },
    "Save" : {

    },
    "Save and Continue" : {

    },
    "Save Artwork Into Media Folders" : {

    },
    "Save Changes" : {

    },
    "Save Format?" : {

    },
    "Save frequently-used folders so you can quickly scan them for unmapped files." : {

    },
    "Save Next to Media" : {
...
    "Unblock" : {

    },
    "Unblock Release?" : {

    },
    "Undo" : {

    },
    "Uninstall" : {
      "comment" : "A button that deletes a plugin.",
      "isCommentAutoGenerated" : true
    },
...
