...
    case seriesFolder
    case seasonFolder
    case specialsFolder

    var title: String {
        switch self {
        case .standardEpisode: "Standard Episode Format"
        case .dailyEpisode: "Daily Episode Format"
        case .animeEpisode: "Anime Episode Format"
        case .seriesFolder: "Series Folder Format"
        case .seasonFolder: "Season Folder Format"
        case .specialsFolder: "Specials Folder Format"
        }
    }
...
